댓글 유저 null일 때 익명으로 표기

--- a/src/main/resources/static/view.html
+++ b/src/main/resources/static/view.html
@@ -158,10 +158,11 @@
                         console.log(response.comments[i])
                         if (response.comments[i].user === null) {
                             let commentListHtml = `
-                                익명 : ${response.comments[i].comment}
-                                <div class="col-12">
-                                    <button type="submit" class="btn btn-primary" onclick="deleteComment(${response.comments[i].id})">댓글 삭제하기</button>
-                                </div>
+
+
+<hr>
+<p style="font-size: small; color:gray;">익명의 방문자, 작성일 : ${response.comments[i].createdAt} <span class="badge bg-secondary" onclick="deleteComment(${response.comments[i].id})">댓글 삭제하기</span></p>
+                            ${response.comments[i].comment}
                             `
                             $("#commentList").append(commentListHtml);
                         } else {
