댓글 삭제 기능 메서드 수정

--- a/src/main/resources/static/view.html
+++ b/src/main/resources/static/view.html
@@ -253,11 +253,11 @@
 
         function deleteComment(id) {
             $.ajax ({
-                type : "DELETE",
+                type : "POST",
                 url:`${apiUrl}/article/comment/${id}`,
                 success : function(response) {
-                    alert("삭제 완료!")
-                    console.log(response)
+                    alert(response)
+                    location.reload();
                 }
             })
         }
