댓글삭제시 500에러 뜰 때 경고 추가

--- a/src/main/resources/static/view.html
+++ b/src/main/resources/static/view.html
@@ -258,6 +258,12 @@
                 success : function(response) {
                     alert(response)
                     location.reload();
+
+                },
+                error : function (request) {
+                    if(request.status === 500) {
+                        alert("댓글을 삭제할 수 없습니다.")
+                    }
                 }
             })
         }
