--- a/src/main/resources/static/community.html
+++ b/src/main/resources/static/community.html
@@ -127,7 +127,7 @@
                                 break
 
                             case 'vote' :
-                                let image4 = response[i].image == null ? `` : `<img src="${response[i].image}" class="card-img-top" style="width: 100%; height: 200px;">`
+                                let image4 = response[i].image == null ? `<img src="https://thebestmeal.s3.ap-northeast-2.amazonaws.com/community/NLrf0DVpPj.jpg" class="card-img-top" style="width: 100%; height: 200px;">` : `<img src="${response[i].image}" class="card-img-top" style="width: 100%; height: 200px;">`
                                 console.log(response[i].vote)
                                 let voteCard = `
                                 <div class="col">
